--- a/helper_projects/may2014/ChefAndStrangeMatrixCHEFBM/ChefAndStrangeMatrixCHEFBM.cbp
+++ b/helper_projects/may2014/ChefAndStrangeMatrixCHEFBM/ChefAndStrangeMatrixCHEFBM.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ChefAndSubarray" />
+		<Option title="ChefAndStrangeMatrixCHEFBM" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ChefAndSubarray" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/ChefAndStrangeMatrixCHEFBM" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ChefAndSubarray" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/ChefAndStrangeMatrixCHEFBM" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,7 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="chefandsubarray.cpp" />
+		<Unit filename="chefbm.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
