--- a/may-2014/May2014CompilersAndParsersCOMPILER/May2014CompilersAndParsersCOMPILER.cbp
+++ b/may-2014/May2014CompilersAndParsersCOMPILER/May2014CompilersAndParsersCOMPILER.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ChefAndSubarray" />
+		<Option title="May2014CompilersAndParsersCOMPILER" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ChefAndSubarray" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/May2014CompilersAndParsersCOMPILER" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ChefAndSubarray" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/May2014CompilersAndParsersCOMPILER" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,8 +32,17 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="chefandsubarray.cpp" />
+		<Unit filename="compiler.cpp" />
 		<Extensions>
+			<DoxyBlocks>
+				<comment_style block="0" line="0" />
+				<doxyfile_project />
+				<doxyfile_build />
+				<doxyfile_warnings />
+				<doxyfile_output />
+				<doxyfile_dot />
+				<general />
+			</DoxyBlocks>
 			<code_completion />
 			<envvars />
 			<debugger />
